experiment/experiment-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    purpose: experiment
  name: experiment-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    purpose: experiment
status:
  loadBalancer: {}
