experiment/experiment.ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: experiment
  name: experiment-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
    - host: marron.irresponsable.tk
      http:
        paths:
          - path: /*
            backend:
              serviceName: experiment-svc
              servicePort: 80
